tests/baselines/reference/symbolType13.errors.txt
tests/cases/conformance/es6/Symbols/symbolType13.ts(4,6): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.


==== tests/cases/conformance/es6/Symbols/symbolType13.ts (1 errors) ====
    var s = Symbol();
    var x: any;
    
    for (s in {}) { }
         ~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
    for (x in s) { }
    for (var y in s) { }